--- a/src/app/shared/components/driverstate/driverstate.component.html
+++ b/src/app/shared/components/driverstate/driverstate.component.html
@@ -1,3 +1,14 @@
-<p class="body">
-  driverstate works!
-</p>
+<div class="dsgrid">
+  <div class="speed">
+    <p class="text">SPEED</p>
+    <p class="textLarge">{{_speed}}</p>
+  </div>
+  <div class="acceleration">
+    <p class="textSmall">ACCELERATION</p>
+    <p class="text">{{_acceleration}}</p>
+  </div>
+  <div class="gear subgrid">
+    <p class="textSmall">GEAR</p>
+    <p class="text">{{_gear}}</p>
+  </div>
+</div>
