--- a/src/app/shared/components/identity/identity.component.html
+++ b/src/app/shared/components/identity/identity.component.html
@@ -1,3 +1,18 @@
-<p class="body">
-  identity works!
-</p>
+<div class="identitygrid">
+  <div class="nickname">
+    <p class="textSmall">NickName</p>
+    <p class="textLarge">{{_nickName}}</p>
+  </div>
+  <div class="vin">
+    <p class="textSmall">VIN</p>
+    <p class="text">{{_vin}}</p>
+  </div>
+  <div class="dbid">
+    <p class="textSmall">Vehicle database ID</p>
+    <p class="text">{{_vehicledbId}}</p>
+  </div>
+  <div class="environment">
+    <p class="textSmall">Environment</p>
+    <p class="text">{{_environment}}</p>
+  </div>
+</div>
