--- a/src/app/shared/components/stateofcharge/stateofcharge.component.html
+++ b/src/app/shared/components/stateofcharge/stateofcharge.component.html
@@ -1,3 +1,18 @@
-<p class="body">
-  stateofcharge works!
-</p>
+<div class="stateofchargegrid">
+  <div>
+    <p class="textSmall">Charge Remaining</p>
+    <div class="battery text">
+      <div [ngClass]="_percentRemaining?getChargeClass():''" [style.width.%]="_percentRemaining">
+        {{_percentRemaining}}%
+      </div>
+    </div>
+  </div>
+  <div>
+    <p class="textSmall">Mileage Remaining</p>
+    <div class="battery text">
+      <div [ngClass]="_remainingMileage?getMileageClass():''" [style.width.%]="_mileagepercent">
+        {{_remainingMileage}}miles
+      </div>
+    </div>
+  </div>
+</div>
