--- a/src/app/shared/components/bodycontrols/bodycontrols.component.html
+++ b/src/app/shared/components/bodycontrols/bodycontrols.component.html
@@ -1,3 +1,46 @@
-<p class="body">
-  bodycontrols works!
-</p>
+<div class="bodycontrolgrid">
+  <div class="sunrooft">
+    <p class="text">Sunroof</p>
+  </div>
+  <div class="sunroofv">
+    <span class="textSmall"> LOCK </span>
+    <label class="switch">
+      <input type="checkbox" [(checked)]="_sunroof">
+      <span class="slider round"></span>
+    </label>
+    <span class="textSmall"> UNLOCK </span>
+  </div>
+  <div class="doorstext">
+    <p class="text">Doors</p>
+  </div>
+  <div class="doorsvalue">
+    <span class="textSmall"> CLOSE </span>
+    <label class="switch">
+      <input type="checkbox" [(checked)]="_doors">
+      <span class="slider round"></span>
+    </label>
+    <span class="textSmall"> OPEN </span>
+  </div>
+  <div class="chargeporttext">
+    <p class="text">Charge Port</p>
+  </div>
+  <div class="chargeportvalue">
+    <span class="textSmall"> CLOSE </span>
+    <label class="switch">
+      <input type="checkbox" [(checked)]="_chargeport">
+      <span class="slider round"></span>
+    </label>
+    <span class="textSmall"> OPEN </span>
+  </div>
+  <div class="windowstext">
+    <p class="text">Windows</p>
+  </div>
+  <div class="windowsvalue">
+    <span class="textSmall"> CLOSE </span>
+    <label class="switch">
+      <input type="checkbox" [(checked)]="_windows">
+      <span class="slider round"></span>
+    </label>
+    <span class="textSmall"> OPEN </span>
+  </div>
+</div>
