--- a/src/app/shared/components/configuration/configuration.component.css
+++ b/src/app/shared/components/configuration/configuration.component.css
@@ -51,7 +51,7 @@
 
 .textSmall{
   color: white;
-  font-size: 12px;
+  font-size: 1.25vmin;
   font-family: Arial;
   margin-right: 10px;
   margin-left: 10px;
@@ -59,13 +59,13 @@
 
 .text{
   color: white;
-  font-size: 20px;
+  font-size: 2vmin;
   font-family: Arial;
 }
 
 .textLarge{
   color: white;
-  font-size: 50px;
+  font-size: 4vmin;
   font-family: Helvetica, sans-serif;
 }
 
