--- a/src/app/shared/components/configuration/configuration.component.html
+++ b/src/app/shared/components/configuration/configuration.component.html
@@ -18,23 +18,13 @@
   <div class="sunrooftext">
     <p class="text">Sunroof</p>
   </div>
-  <div class="sunroofvalue textSmall">
-    <span class="textSmall"> NO </span>
-    <label class="switch">
-      <input type="checkbox" disabled="true" [checked]="_sunroof">
-      <span class="slider round"></span>
-    </label>
-    <span class="textSmall"> YES </span>
+  <div class="sunroofvalue">
+    <p class="text"> {{_sunroofString}} </p>
   </div>
   <div class="dualmotortext">
     <p class="text">Dual Motor</p>
   </div>
   <div class="dualmotorvalue">
-    <span class="textSmall"> NO </span>
-    <label class="switch">
-      <input type="checkbox" disabled="true" [checked]="_dualmotor">
-      <span class="slider round"></span>
-    </label>
-    <span class="textSmall"> YES </span>
+    <p class="text"> {{_dualmotorString}} </p>
   </div>
 </div>
