--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,9 @@
+
+
 .maingrid{
-  display: grid;
-  grid: 1fr 1fr / 1fr 1fr 1fr;
-  grid-gap: 10px;
-  height: 90vh;;
+  display: flex;
+  flex-direction: row;
+  height: 47vh;
 }
 
 .maingrid div{
@@ -13,6 +14,7 @@
 .chargefirmgrid{
   display: grid;
   grid: 50% 50% / 1fr;
+  width: 33vw;
 }
 
 .chargefirmgrid div{
@@ -24,4 +26,5 @@
   background-image:url( /assets/images/background/teslaimg2.png );
   background-repeat:no-repeat;
   background-size:cover;
+  width: 33vw;
 }
