--- a/src/app/shared/components/driverstate/driverstate.component.css
+++ b/src/app/shared/components/driverstate/driverstate.component.css
@@ -30,18 +30,18 @@
 
 .textSmall{
   color: white;
-  font-size: 12px;
+  font-size: 1.25vmin;
   font-family: Arial;
 }
 
 .text{
   color: white;
-  font-size: 20px;
+  font-size: 2vmin;
   font-family: Arial;
 }
 
 .textLarge{
   color: white;
-  font-size: 60px;
+  font-size: 4vmin;
   font-family: Helvetica, sans-serif;
 }
