--- a/src/app/shared/components/firmware/firmware.component.css
+++ b/src/app/shared/components/firmware/firmware.component.css
@@ -28,19 +28,19 @@
 }
 
 .myBar {
-  height: 30px;
+  height: 0.5vh;
   background-color: green;
 }
 
 .textSmall{
   color: white;
-  font-size: 12px;
+  font-size: 1.25vmin;
   font-family: Arial;
 }
 
 .text{
   color: white;
-  font-size: 20px;
+  font-size: 2vmin;
   font-family: Arial;
 }
 
