--- a/src/app/shared/components/hvac/hvac.component.css
+++ b/src/app/shared/components/hvac/hvac.component.css
@@ -32,13 +32,13 @@
 
 .textSmall{
   color: white;
-  font-size: 12px;
+  font-size: 1.25vmin;
   font-family: Arial;
 }
 
 .text{
   color: white;
-  font-size: 20px;
+  font-size: 2vmin;
   font-family: Arial;
 }
 
@@ -49,7 +49,7 @@
 .slider {
   -webkit-appearance: none;
   width: 100%;
-  height: 25px;
+  height: 3vh;
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
@@ -64,15 +64,15 @@
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 25px;
-  height: 25px;
+  width: 3vh;
+  height: 3vh;
   background: #4CAF50;
   cursor: pointer;
 }
 
 .slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
+  width: 3vh;
+  height: 3vh;
   background: #4CAF50;
   cursor: pointer;
 }
