--- a/src/app/shared/components/hvac/hvac.component.css
+++ b/src/app/shared/components/hvac/hvac.component.css
@@ -49,7 +49,7 @@
 .slider {
   -webkit-appearance: none;
   width: 100%;
-  height: 3vh;
+  height: 0.5vh;
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
@@ -68,6 +68,7 @@
   height: 3vh;
   background: #4CAF50;
   cursor: pointer;
+  border-radius: 50%;
 }
 
 .slider::-moz-range-thumb {
