--- a/src/app/shared/components/stateofcharge/stateofcharge.component.html
+++ b/src/app/shared/components/stateofcharge/stateofcharge.component.html
@@ -1,17 +1,17 @@
 <div class="stateofchargegrid">
   <div>
     <p class="textSmall">Charge Remaining</p>
-    <div class="battery textSmall">
+    <div class="battery">
       <div [ngClass]="_percentRemaining?getChargeClass():''" [style.width.%]="_percentRemaining">
-        {{_percentRemaining}}%
+        <div class="textSmall">{{_percentRemaining}}%</div>
       </div>
     </div>
   </div>
   <div>
     <p class="textSmall">Mileage Remaining</p>
-    <div class="battery textSmall">
+    <div class="battery">
       <div [ngClass]="_remainingMileage?getMileageClass():''" [style.width.%]="_mileagepercent">
-        {{_remainingMileage}}miles
+        <div class="textSmall">{{_remainingMileage}}miles</div>
       </div>
     </div>
   </div>
